stories card add

--- a/index.html
+++ b/index.html
@@ -68,6 +68,44 @@
             <a class="card-C" href="#">Read More</a>
           </div>
         </div>
+        <div class="slid-contant">
+          <a  href=""><button class="arrow"><</button></a>
+          <a  href=""><button class="arrow">></button></a>
+        </div>
+      </section>
+      <section class="quicksand-font">
+        <h1 class="stories-title">Our Stories</h1>
+        <div class="stories-cards">
+          <div class="s-card card1">
+            <img class="card-image" src="assets/story-1.png" alt="#"><br>
+            <button class="btn-card btn1 raleway-font">November 15, 2018</button>
+            <h5 class="s-card-title1">A fun toddler coloring training on classroom</h5>
+            <p class=" s-card-details raleway-font">Beautiful branding for changes by Never Now in Australia.changes is a platform for open discussion in an inclusive and collaborative environment, providing the...</p>
+          </div>
+          <div class="s-card card2">
+            <img class="card-image" src="assets/story-2.png" alt="#"><br>
+            <button class="btn-card btn2">November 19, 2019</button>
+            <h5 class="s-card-title">Find out if a school fits the family’s needs</h5>
+          </div>
+          <div class="s-card card3">
+            <img class="card-image" src="assets/story-3.png" alt="#"><br>
+            <button class="btn-card btn3">November 20, 2019</button>
+            <h5 class="s-card-title">Summer math & literacy
+              centres for kids</h5>
+          </div>
+          <div class="s-card card4">
+            <img class="card-image" src="assets/story-4.png" alt="#"><br>
+            <button class="btn-card btn4">November 25,2020</button>
+            <h5 class="s-card-title">Classroom management
+              techniques for new tutors</h5>
+          </div>
+          <div class="s-card card5">
+            <img class="card-image" src="assets/story-5.png" alt="#"><br>
+            <button class="btn-card btn5">November 30, 2021</button>
+            <h5 class="s-card-title">Conversation rhymes
+              improve kids listening</h5>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
