--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
           <a href="#"><li class="admission">Admission</li></a>
         </ul>
         <a class="contact-btn" href="#"><button class="btn-primary">Contact</button></a>
-        <div class="dot-icon">
-          <div class=""></div>
-          <div class=""></div>
-          <div class=""></div>
-        </div>
+        <a class="dot-icon" href=""><img src="assets/dot.png" alt=""></a>
       </nav>
       <hr />
       <div class="banner-containt">
@@ -73,7 +69,7 @@
           <a  href=""><button class="arrow">></button></a>
         </div>
       </section>
-      <section class="quicksand-font">
+      <section class="quicksand-font display-none">
         <h1 class="stories-title">Our Stories</h1>
         <div class="stories-cards">
           <div class="s-card card1">
@@ -106,7 +102,7 @@
               improve kids listening</h5>
           </div>
         </div>
-      </section>
+      </section> 
     </main>
     <footer>
 
