--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
           <a href="#"><li class="admission">Admission</li></a>
         </ul>
         <a class="contact-btn" href="#"><button class="btn-primary">Contact</button></a>
-        <a class="dot-icon" href=""><img src="assets/dot.png" alt=""></a>
+        <div class="dot-icon">
+          <div class=""></div>
+          <div class=""></div>
+          <div class=""></div>
+        </div>
       </nav>
-      <hr />
       <div class="banner-containt">
         <div class="banner-containt-txt">
           <h1 class="banner-title">
@@ -102,6 +105,7 @@
               improve kids listening</h5>
           </div>
         </div>
+        <a class="card-btn" href=""><button class="banner-btn">View All</button></a>
       </section> 
     </main>
     <footer>
