--- a/index.html
+++ b/index.html
@@ -108,8 +108,34 @@
         <a class="card-btn" href=""><button class="banner-btn">View All</button></a>
       </section> 
     </main>
-    <footer>
-
+    <footer class=" quicksand-font">
+      <div class="footer-contant">
+        <div class="footer-logo-section">
+          <div class="footer-logo">
+            <img src="assets/logo.png" alt="KILDER GARDEN-LOGO">
+            <h1 class="footer-title">Kids <br> Education</h1>
+          </div>
+          <p class="footer-discription">Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+        </div>
+        <div class="footer-about display">
+          <h4>About School</h4>
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Facilites</li>
+            <li>Admission</li>
+          </ul>
+        </div>
+        <div class="footer-social">
+          <h1>Keep In Touch</h1>
+          <span class="social">
+            <a href="#"><img src="assets/fb.png" alt="#"></a>
+            <a href="#"><img src="assets/dribble.png" alt="#"></a>
+            <a href="#"><img src="assets/twitter.png" alt="#"></a>
+            <a href="#"><img src="assets/google+.png" alt="#"></a>
+          </span>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
