background-color-imgae add

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <br />
             shape a brighter and inclusive future for everyone.
           </p>
-          <a href=""><button class="banner-btn">Enroll Now</button></a>
+          <a  href=""><button class="banner-btn">Enroll Now</button></a>
         </div>
           <img class="banner-img" src="assets/hero-kids.png" alt="" />
       </div>
@@ -68,8 +68,8 @@
           </div>
         </div>
         <div class="slid-contant">
-          <a  href=""><button class="arrow"><</button></a>
-          <a  href=""><button class="arrow">></button></a>
+          <a  href="#"><button class="arrow"><</button></a>
+          <a  href="#"><button class="arrow">></button></a>
         </div>
       </section>
       <section class="quicksand-font display-none">
@@ -105,7 +105,7 @@
               improve kids listening</h5>
           </div>
         </div>
-        <a class="card-btn" href=""><button class="banner-btn">View All</button></a>
+        <a class="card-btn" href=""><button class="btn-v">View All</button></a>
       </section> 
     </main>
     <footer class=" quicksand-font">
