--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <br />
             shape a brighter and inclusive future for everyone.
           </p>
-          <a  href=""><button class="banner-btn">Enroll Now</button></a>
+          <a  href="#"><button class="primary-btn">Enroll Now</button></a>
         </div>
           <img class="banner-img" src="assets/hero-kids.png" alt="" />
       </div>
